// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button style with and without href it applies default styles button without href 1`] = `
.c0 {
  background-color: transparent;
  border: none;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.25;
}

<button
  className="c0"
/>
`;

exports[`it applies default styles 1`] = `
.c0 {
  background-color: transparent;
  border: none;
}

<button
  className="c0"
/>
`;

exports[`it applies default styles without href 1`] = `
.c0 {
  background-color: transparent;
  border: none;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.25;
}

<button
  className="c0"
/>
`;
